// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ClearButton> Default story renders snapshot 1`] = `
<button
  aria-label="Clear"
  class="close btn-close rbt-close"
  type="button"
>
  <span
    aria-hidden="true"
    class="rbt-close-content"
  >
    ×
  </span>
  <span
    class="sr-only visually-hidden"
  >
    Clear
  </span>
</button>
`;

exports[`<ClearButton> Large story renders snapshot 1`] = `
<button
  aria-label="Clear"
  class="close btn-close rbt-close rbt-close-lg"
  type="button"
>
  <span
    aria-hidden="true"
    class="rbt-close-content"
  >
    ×
  </span>
  <span
    class="sr-only visually-hidden"
  >
    Clear
  </span>
</button>
`;

exports[`<ClearButton> Small story renders snapshot 1`] = `
<button
  aria-label="Clear"
  class="close btn-close rbt-close rbt-close-sm"
  type="button"
>
  <span
    aria-hidden="true"
    class="rbt-close-content"
  >
    ×
  </span>
  <span
    class="sr-only visually-hidden"
  >
    Clear
  </span>
</button>
`;
